hphp/hack/test/typecheck/fc_enum_case_3.php.exp
File "fc_enum_case_3.php", line 11, characters 11-12:
Switch statement nonexhaustive; the following cases are missing: BAZ, BAR (Typing[4019])
File "fc_enum_case_3.php", line 3, characters 6-8:
Enum declared here
